--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
     <h1>Please select the language and chemfiles version you are using:</h1>
-    <div class="vspace-3"></div>
+    <div class="mt-3"></div>
     <div class="row">
         <div class="col-lg-3">
             <figure>
@@ -46,7 +46,7 @@
         <div class="col-lg-3"></div>
     </div>
 
-    <div class="vspace-3"></div>
+    <div class="mt-3"></div>
     <div class="row">
         <div class="col-lg-3">
             <figure>
@@ -85,7 +85,7 @@
         <div class="col-lg-3"></div>
     </div>
 
-    <div class="vspace-3"></div>
+    <div class="mt-3"></div>
     <div class="row">
         <div class="col-lg-3">
             <figure>
