Update all links to version 0.10

--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -2,11 +2,8 @@
 {% block title %} — Documentation{% endblock %}
 
 {% block body %}
-<div class="jumbotron">
-</div>
-<div class="container">
-    <h1>Please select the language and chemfiles version you are using:</h1>
-    <div class="mt-3"></div>
+<div class="container mt-5">
+    <h2 class="mb-5">Select the language and chemfiles version you are using:</h1>
     <div class="row">
         <div class="col-lg-3">
             <figure>
@@ -17,12 +14,8 @@
         <div class="col-lg-3">
             <ul>
                 <li><a href="/chemfiles/latest/">Latest development version</a></li>
-                <li><a href="/chemfiles/0.9.3/">Stable version: 0.9.3</a></li>
-                <li><a href="/chemfiles/0.8.0/">Version 0.8.0</a></li>
-                <li><a href="/chemfiles/0.7.4/">Version 0.7.4</a></li>
-                <li><a href="/chemfiles/0.6.0/">Version 0.6.0</a></li>
-                <li><a href="/chemfiles/0.5.0/">Version 0.5.0</a></li>
-                <li><a href="/chemfiles/0.4.0/">Version 0.4.0</a></li>
+                <li><a href="/chemfiles/0.10.0/">Stable version: 0.10.0</a></li>
+                <li><a href="/chemfiles/0.9.3/">Previous version: 0.9.3</a></li>
             </ul>
         </div>
 
@@ -35,18 +28,14 @@
         <div class="col-lg-3">
             <ul>
                 <li><a href="/chemfiles.py/latest/">Latest development version</a></li>
-                <li><a href="/chemfiles.py/0.9.3/">Stable version: 0.9.3</a></li>
-                <li><a href="/chemfiles.py/0.8.0/">Version 0.8.0</a></li>
-                <li><a href="/chemfiles.py/0.7.4/">Version 0.7.4</a></li>
-                <li><a href="/chemfiles.py/0.6.0/">Version 0.6.0</a></li>
-                <li><a href="/chemfiles.py/0.5.0/">Version 0.5.0</a></li>
-                <li><a href="/chemfiles.py/0.4.0/">Version 0.4.0</a></li>
+                <li><a href="/chemfiles.py/0.10.0/">Stable version: 0.10.0</a></li>
+                <li><a href="/chemfiles.py/0.9.3/">Previous version: 0.9.3</a></li>
             </ul>
         </div>
         <div class="col-lg-3"></div>
     </div>
 
-    <div class="mt-3"></div>
+    <div class="mt-5"></div>
     <div class="row">
         <div class="col-lg-3">
             <figure>
@@ -57,11 +46,8 @@
         <div class="col-lg-3">
             <ul>
                 <li><a href="/chemfiles.f03/latest/">Latest development version</a></li>
-                <li><a href="/chemfiles.f03/0.9.3/">Stable version: 0.9.3</a></li>
-                <li><a href="/chemfiles.f03/0.8.0/">Version 0.8.0</a></li>
-                <li><a href="/chemfiles.f03/0.7.4/">Version 0.7.4</a></li>
-                <li><a href="/chemfiles.f03/0.6.0/">Version 0.6.0</a></li>
-                <li><a href="/chemfiles.f03/0.5.0/">Version 0.5.0</a></li>
+                <li><a href="/chemfiles.f03/0.10.0/">Stable version: 0.10.0</a></li>
+                <li><a href="/chemfiles.f03/0.9.3/">Previous version: 0.9.3</a></li>
             </ul>
         </div>
 
@@ -74,18 +60,14 @@
         <div class="col-lg-3">
             <ul>
                 <li><a href="/chemfiles.jl/latest/">Latest development version</a></li>
-                <li><a href="/chemfiles.jl/v0.9.3/">Stable version: 0.9.3</a></li>
-                <li><a href="/chemfiles.jl/v0.8.0/">Version 0.8.0</a></li>
-                <li><a href="/chemfiles.jl/v0.7.4/">Version 0.7.4</a></li>
-                <li><a href="/chemfiles.jl/v0.6.0/">Version 0.6.0</a></li>
-                <li><a href="/chemfiles.jl/v0.5.0/">Version 0.5.0</a></li>
-                <li><a href="/chemfiles.jl/v0.4.0/">Version 0.4.0</a></li>
+                <li><a href="/chemfiles.jl/v0.10.0/">Stable version: 0.10.0</a></li>
+                <li><a href="/chemfiles.jl/v0.9.3/">Previous version: 0.9.3</a></li>
             </ul>
         </div>
         <div class="col-lg-3"></div>
     </div>
 
-    <div class="mt-3"></div>
+    <div class="mt-5"></div>
     <div class="row">
         <div class="col-lg-3">
             <figure>
@@ -96,12 +78,8 @@
         <div class="col-lg-3">
             <ul>
                 <li><a href="/chemfiles.rs/latest/">Latest development version</a></li>
-                <li><a href="/chemfiles.rs/0.9.3/">Stable version: 0.9.3</a></li>
-                <li><a href="/chemfiles.rs/0.8.0/">Version: 0.8.0</a></li>
-                <li><a href="/chemfiles.rs/0.7.40/">Version 0.7.40</a></li>
-                <li><a href="/chemfiles.rs/0.7.4/">Version 0.7.4</a></li>
-                <li><a href="/chemfiles.rs/0.5.0/">Version 0.5.0</a></li>
-                <li><a href="/chemfiles.rs/0.4.0/">Version 0.4.0</a></li>
+                <li><a href="/chemfiles.rs/0.10.0/">Stable version: 0.10.0</a></li>
+                <li><a href="/chemfiles.rs/0.9.3/">Previous version: 0.9.3</a></li>
             </ul>
         </div>
     </div>
