--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -169,7 +169,7 @@
         <div class="col-md-6 mb-4">
             <figure>
                 <figcaption>Julia Pkg</figcaption>
-                <a href="https://pkg.julialang.org/docs/Chemfiles/GIbve/0.9.1/">
+                <a href="https://github.com/chemfiles/chemfiles.jl">
                     <img src="/static/images/logo-julia.svg" height=70px alt="Julia logo" />
                 </a>
             </figure>
@@ -183,7 +183,7 @@
                     <img src="/static/images/cargo-logo.svg" height=70px alt="Cargo logo" />
                 </a>
             </figure>
-            <pre style="text-align: center;">chemfiles = "0.9"</pre>
+            <pre style="text-align: center;">chemfiles = "0.10"</pre>
         </div>
 
         <div class="col-md-6">
