Fix links for Chemfiles.jl

--- a/src/pages/documentation.html
+++ b/src/pages/documentation.html
@@ -59,9 +59,9 @@
         </div>
         <div class="col-lg-3">
             <ul>
-                <li><a href="/chemfiles.jl/latest/">Latest development version</a></li>
-                <li><a href="/chemfiles.jl/v0.10.0/">Stable version: 0.10.0</a></li>
-                <li><a href="/chemfiles.jl/v0.9.3/">Previous version: 0.9.3</a></li>
+                <li><a href="/Chemfiles.jl/latest/">Latest development version</a></li>
+                <li><a href="/Chemfiles.jl/v0.10.0/">Stable version: 0.10.0</a></li>
+                <li><a href="/Chemfiles.jl/v0.9.3/">Previous version: 0.9.3</a></li>
             </ul>
         </div>
         <div class="col-lg-3"></div>
