--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -169,7 +169,7 @@
         <div class="col-md-6 mb-4">
             <figure>
                 <figcaption>Julia Pkg</figcaption>
-                <a href="https://github.com/chemfiles/chemfiles.jl">
+                <a href="https://github.com/chemfiles/Chemfiles.jl">
                     <img src="/static/images/logo-julia.svg" height=70px alt="Julia logo" />
                 </a>
             </figure>
